moved css rules for top-/bottom navbars line-wrapping prevention to mobile.css because it causes problem on large screens

--- a/visu/designs/metal/basic.css
+++ b/visu/designs/metal/basic.css
@@ -808,19 +808,6 @@ background-color: #000;
 
 /* END: alignment of widgets */
 
-/* prevent top/bottom navbar wrapping, use scrolling instead, if necessary */
-#navbarTop > .navbar > div, #navbarTop > .navbar > hr {
-	display: inline-block;
-	float: none;
-}
-#navbarTop > .navbar , #navbarBottom > .navbar {
-	overflow-y: hidden;
-	overflow-x: auto;
-	white-space: nowrap;
-	height: 3.6em;
-}
-
-
 /* fixes for plugin line-heights */
 .widget .actor.rsslogBody, .widget .actor .diagram_inline {
     line-height: normal;
